fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(to bottom, black 0%, black 3%, rgb(236, 237, 251) 33%, rgb(251, 243, 236) 80%, #003150 100%);
-    background-size: 100%;
+    /* background-size: 100%; */
     font-family: sans-serif;
     font-size: 1.1em;
     /* line-height: 1em; */
@@ -9,7 +9,7 @@ body {
 h1 {
     font-family: 'Overlock', cursive;
     color: white;
-    text-align: center;
+    /* text-align: center; */
     z-index:10 !important;
     /* margin-top:5vh !important; */
     animation: slideInDown 1s ease-out;
@@ -23,6 +23,7 @@ h1 {
     /* top: 50%;
     transform: translateY(-50%); */
     /* line-height: 100vh !important; */
+    margin: 0 auto;
 }
 
 
@@ -58,14 +59,16 @@ h1 {
     overflow: auto;
     /* line-height: 100vh !important; */
     /* display: grid; */
-    /* text-align: center; */
+    text-align: center;
     /* grid-template-columns: 1fr; */
-    justify-content: center;
+    /* justify-content: center; */
     /* align-items: center; */
     vertical-align: middle;
     /* display: table-cell; */
+    /* margin-left:200px !important; */
     margin-top:150px !important;
-    
+    margin-bottom:-150px !important;
+    margin: 0 auto;
     
     
 
@@ -170,14 +173,14 @@ span {
     z-index:10 !important;
 }
 
-.nav-wrapper {
+/* .nav-wrapper {
     margin: 0 auto;
     color: black;
     margin-top: 650px;
     height: 300px;
     background: #234;
     position: relative;
-}
+} */
 
 .blueLine {
     height: 4px;
@@ -186,9 +189,9 @@ span {
 }
 
 #about {
-    /* margin-top: -49px; */
+    /* margin-top: -149px; */
     /* background: white; */
-    height: auto;
+    /* height: auto; */
     width: 100%;
     
 }
